# smart_tg_bot

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose-multistage.yml  docker-compose.yml  pyproject.toml
docker/multistage/: Dockerfile
resources/menus/: gpt.json  main.json  quiz.json  random.json
resources/messages/: gpt.html  main.html  quiz.html  random.html
resources/prompts/: gpt.txt  quiz.txt  random.txt
src/: bot.py  config.py  main.py  openapi_client.py  utils.py
src/bot/: commands.py  keyboards.py  message_sender.py  resource_loader.py
src/bot/handlers/: gpt_handler.py  message_router.py  quiz_handler.py
src/bot/utils/: decorators.py  openai_quiz.py  openai_threads.py  quiz.py
src/db/: enums.py  initializer.py  repository.py
src/resources/messages/: main.txt
src/services/: __init__.py
src/services/chatgpt/: assistant_manager.py  assistant_manager_cli.py  client.py
src/settings/: __init__.py  config.py  logging_config.py
